# hugging_face_spaces_demo

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync_to_huggingface.yml
