[project]
name = "huggingface-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "gradio>=6.3.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.13.0.90",
    "pillow>=12.1.0",
    "streamlit>=1.53.0",
]
